--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^3.4.1",
     "cors": "^2.8.5",
+    "express": "^4.16.4",
     "fabric-ca-client": "^1.4.1",
     "fabric-network": "^1.4.1",
     "fs": "0.0.1-security",
