--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "^3.0.0"
   },
   "browserslist": {
