--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "auth0-js": "^9.10.2",
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "jquery": "^3.4.0",
